@@ -14,7 +14,7 @@ import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.YesOrNo;
 import uk.gov.hmcts.reform.finrem.caseorchestration.service.AdditionalHearingDocumentService;
 import uk.gov.hmcts.reform.finrem.caseorchestration.service.HearingDocumentService;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static uk.gov.hmcts.reform.finrem.caseorchestration.ccd.callback.CallbackType.SUBMITTED;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.EventType.DIRECTION_UPLOAD_ORDER;
@@ -38,7 +38,7 @@ public class DirectionUploadOrderSubmittedHandler extends FinremCallbackHandler 
     @Override
     public boolean canHandle(CallbackType callbackType, CaseType caseType, EventType eventType) {
         return SUBMITTED.equals(callbackType) && CONTESTED.equals(caseType)
-            && Arrays.asList(DIRECTION_UPLOAD_ORDER, PROCESS_ORDER).contains(eventType);
+            && List.of(DIRECTION_UPLOAD_ORDER, PROCESS_ORDER).contains(eventType);
     }
 
     @Override
